    - macOS: `$HOME/Library/Application Support/org.shadowsocks.shadowsocks-rust/config.json`
  - #691 Manipulating default logging options (command line options `-vvv` and `--log-without-time`) with environment variable `SS_LOG_VERBOSE_LEVEL` and `SS_LOG_WITHOUT_TIME`
  - #419 Read servers' password from environment variables
    - Server created from command line argument without `--password`, reading password from `SS_SERVER_${SERVER_ADDR}_PASSWORD`, `SS_SERVER_PASSWORD` or TTY
    - Server defined in configuration file, `"password"` field support `${VAR_NAME}` format to read password from environment variable `VAR_NAME`

shadowsocks-rust (1.12.2) unstable; urgency=medium

  ## BUG Fixes

  - #683 local-dns command line `--remote-dns-addr` will have default port `53`

  ## Miscellaneous

  - Removed direct dependency to [`mio`](https://crates.io/crates/mio), sending file descriptors through UDS now with [`sendfd`](https://crates.io/crates/sendfd).

shadowsocks-rust (1.12.1) unstable; urgency=medium

  ## Features

    - #669 ACL regular expression rules will try to convert to `||` (sub-domains) and `|` (exact match) rules.

  ## Bug Fixes

    - #674 MIPS targets in pre-built releases binaries will be compressed by `upx`
    - #670 Servers created by command line options in `ssserver` will have mode `tcp_only`

shadowsocks-rust (1.12.0) unstable; urgency=medium

  ## Features

  - TCP connects with Happy Eyeballs (RFC6555, RFC8305) strategy
  - Local 
    - #586 Basic support of `tun` interface in `sslocal` (Experimental) Tested on macOS and Linux
    - #620 Local server will choose remote servers based on their `"mode"`
    - Local Balancer
      - Configurable `max_server_rtt` and `check_interval`
      - Reload configuration `"servers"` in runtime when receiving `SIGUSR1` signal
  - Manager
    - #421 `ssmanager` support `--plugin` and `--plugin-opts` as default plugin configurations